@@ -1,5 +1,9 @@
 2006-08-10  Chris Dunlap  <cdunlap@llnl.gov>
 
+	* src/etc/munge.init.in: Replaced Debian's "--oknodo" with test
+	  for "$0 status" since --oknodo would also mask errors such as
+	  "operation not permitted".
+
 	* Makefile.am: Replaced distclean-local target with DISTCLEANFILES.
 
 	* src/etc/Makefile.am: Added munge.init to noinst_DATA.
